--- a/code/final_homework_draft.html
+++ b/code/final_homework_draft.html
@@ -179,8 +179,7 @@ div.csl-indent {
 
 </header>
 
-<p>Link to Github repo: https://github.com/stephanie-t-nguyen/ENVS-193DS_homework-05</p>
-<p>Link to rendered HTML: https://stephanie-t-nguyen.github.io/ENVS-193DS_homework-05/code/final_homework_draft.html</p>
+<p>Links: <a href="@https://stephanie-t-nguyen.github.io/ENVS-193DS_homework-05/code/final_homework_draft.html">rendered HTML page</a>, <a href="@https://github.com/stephanie-t-nguyen/ENVS-193DS_homework-05">Github repo</a></p>
 <section id="introduction" class="level1">
 <h1>Introduction</h1>
 <p>The <em>Sarracena</em> genus are a group of North American carnivorous plants that have radiated into a number of similar but ultimately different species <span class="citation" data-cites="stephens2015">(<a href="#ref-stephens2015" role="doc-biblioref">Stephens et al. 2015</a>)</span>. They are characterized by their pitcher shape structures which lures insects and thus are known as the pitcher plants. They typically grow in nitrogen-low and nutrient-poor soils, which includes bogs, wetlands, and fens <span class="citation" data-cites="srivastava2011">(<a href="#ref-srivastava2011" role="doc-biblioref">Srivastava et al. 2011</a>)</span>.</p>
